<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="loading_progress">Loading Progress</string>

    <string name="notification_channel_name">FlickrFetchr</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures inPhotoGallery.</string>

    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="use_chrome_custom_tab">Use Chrome Custom Tab</string>
</resources>