<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <!-- TODO 这里有个坑 就是要使用 "app:actionLayout",而不是 "android:actionLayout" -->
    <item
        android:id="@+id/menu_item_progress"
        android:title="@string/loading_progress"
        android:visible="false"
        app:actionLayout="@layout/menu_loading_progress"
        app:showAsAction="ifRoom"
        tools:visible="true" />
    <item
        android:id="@+id/menu_item_clear"
        android:title="@string/clear_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_toggle_polling"
        android:checkable="true"
        android:title="@string/start_polling"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/menu_item_toggle_chrome_custom_tab"
        android:checkable="true"
        android:title="@string/use_chrome_custom_tab"
        app:showAsAction="never|withText" />
    <!-- 选择适配器 单选 -->
    <group
        android:id="@+id/menu_select_adapter"
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/menu_adapter_default"
            android:checkable="true"
            android:checked="true"
            android:title="默认适配器"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_adapter_glide"
            android:checkable="true"
            android:checked="false"
            android:title="Glide适配器"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_adapter_picasso"
            android:checkable="true"
            android:checked="false"
            android:title="Picasso适配器"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_adapter_fresco"
            android:checkable="true"
            android:checked="false"
            android:title="Fresco适配器"
            app:showAsAction="never" />


    </group>

</menu>